tests/reject/classOverrideDifferentStorageType.emojic
🐇 🐟 🍇
  🍰 name 🔡

  🐈 🆕 🍼 name 🔡 🍇🍉

  🐖 🙋 lang 🔡 🍇
    😀 🍪name lang 🍪
  🍉
🍉

🐇 🐡 🐟 🍇
  ✒️ 🐖 🙋 lang 🍬🔡 🍇
    🍊 🍦 l lang 🍇
      🐿🙋 l
    🍉
    🍓 🍇
      😀 🔤oh!🔤
    🍉
  🍉
🍉

🏁 🍇
  🍰 f 🐟

  🍮 f 🔷🐟🆕 🔤bobby🔤
  🙋 f 🔤en🔤
  🍮 f 🔷🐡🆕 🔤bobby🔤
  🙋 f 🔤en🔤
🍉
